kubernetes/core/sales-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sales
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sales
        version: v1
        visualize: "true"
    spec:
      containers:
      - name: sales
        image: yguenoun/sales-service:0.0.1-SNAPSHOT
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /admin/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10 # default is 10s
        readinessProbe:
          httpGet:
            path: /admin/health
            port: 80
          initialDelaySeconds: 5
