kubernetes/core/stock-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stock
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stock
        visualize: "true"
        version: v1
    spec:
      containers:
      - name: stock
        image: yguenoun/stock-service:0.0.1-SNAPSHOT
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /admin/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10 # default is 10s
        readinessProbe:
          httpGet:
            path: /admin/health
            port: 80
          initialDelaySeconds: 5
