kubernetes/core/sales-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales
  labels:
    app: sales
    visualize: "true"
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: sales
