kubernetes/core/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
  labels:
    app: store
    visualize: "true"
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: frontend
