kubernetes/core/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: onlinestore
spec:
  rules:
  - host: store.local
    http:
      paths:
      - path: /
        backend:
          serviceName: store
          servicePort: http
